workshop/apm/splunk-astronomy-shop/splunk-astronomy-shop-latest-lambda.yaml
# Splunk Astronomy Shop Kubernetes Manifest - lambda
# Version: 2.0.8
# Generated on: 2026-08-14T14:18:44Z
#
# This manifest combines service deployments for the Splunk Astronomy Shop
# Services are defined in services.yaml
---

# === planning ===
# Kubernetes manifest for planning
# Auto-generated from opentelemetry-demo.yaml
# Contains 1 resource(s)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning
  labels:
    opentelemetry.io/name: planning
    app.kubernetes.io/component: planning
    app.kubernetes.io/name: planning
    app.kubernetes.io/version: 2.0.8
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      opentelemetry.io/name: planning
  template:
    metadata:
      labels:
        opentelemetry.io/name: planning
        app.kubernetes.io/component: planning
        app.kubernetes.io/name: planning
    spec:
      serviceAccountName: opentelemetry-demo
      containers:
      - name: planning
        image: ghcr.io/splunk/opentelemetry-demo/otel-planning:2.0.8
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
        volumeMounts: null
      volumes: null

---
